--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,27 @@
+/*ul indention */
 ul {
     padding: 0;
     list-style-type: none;
+}
+
+.lc{
+    display: flex;
+}
+
+.title {
+    
+ }
+
+.info {
+    background-color: rgb(107, 107, 238);
+    justify-content: space-between;
+    width: 300px;
+}
+
+.personal skills {
+
+}
+
+.img {
+    width: 300px;
 }
