--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,98 @@
+main {
+    display: grid;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-rows: 25% 25% 25% 25%;
+    width: 500pt;
+    height: 500pt;
+    border: solid red 1pt;
+    background-color: antiquewhite;
+}
+
+h2{
+    margin-left: 10px;
+    margin-bottom: 0px;
+}
+
+.image-container {
+    background-color: pink;
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+
+.img {
+    width: 100%;
+}
+
 /*ul indention */
 ul {
     padding: 0;
     list-style-type: none;
 }
 
-.lc{
+li{
+    margin-top: 5px;
+    border:px solid grey;
+}
+
+.title-container {
+    grid-column: 2/span 3;
+    grid-row: 1;
+    font-size: 25px;
+    text-align: left;
+    line-height: 1;
+ }
+
+.info-container {
+    background-color: rgb(107, 107, 238);
+    justify-content: space-between;
+    grid-column: 1;
+    grid-row: 3/span 4;
+    font-size: 12px;
+    text-align: center;
+}
+
+.ps-container {
+    grid-column: 2/span 3;
+    grid-row: 2/3;
+    display: flex;
+    font-size: small;
+}
+
+.cs-container{
+    margin-left: 0;
+}
+.cs{
+    line-height: .5;
+}
+
+.summary{
+    inline-size: 250px;
+    margin-left: 20px;
+    margin-right: 0px;
+}
+
+.flex {
     display: flex;
 }
 
-.title {
-    
- }
-
-.info {
-    background-color: rgb(107, 107, 238);
-    justify-content: space-between;
-    width: 300px;
+.wh-container {
+    grid-column: 2/ span 3;
+    grid-row: 3/span 3;
+    font-size: small;
 }
 
-.personal skills {
-
+.rescue {
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.img {
-    width: 300px;
+.ah-container {
+    grid-column: 2/ span 3;
+    grid-row: 4;
+    font-size: small;
+}
+
+.history {
+    margin-left: 20px;
+    margin-right: 20px;
 }
