--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,18 @@ main {
     display: grid;
     grid-template-columns: 33.3% 33.3% 33.3%;
     grid-template-rows: 25% 25% 25% 25%;
-    width: 500pt;
+    width: 501pt;
     height: 500pt;
     border: solid red 1pt;
     background-color: antiquewhite;
 }
 
+h1{
+    margin-bottom: ;
+}
+
 h2{
+    margin-top: 5px;
     margin-left: 10px;
     margin-bottom: 0px;
 }
@@ -40,6 +45,7 @@ li{
     font-size: 25px;
     text-align: left;
     line-height: 1;
+    margin-left: 10px;
  }
 
 .info-container {
